Fixed Career Image Ratio
Fixed career images being far too small

--- a/komps/career/komp.career.style.css
+++ b/komps/career/komp.career.style.css
@@ -116,7 +116,7 @@ career{
             };
             img{
                 padding: 2vw;
-                width: 30vw;  
+                width: 50vw;  
             };
             column{
                 display: flex;
